--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,50 +1,3 @@
-//plugins {
-//    id("com.android.application")
-//    id("com.google.gms.google-services")
-//}
-//
-//android {
-//    namespace = "com.example.wonder_trip_project"
-//    compileSdk = 34
-//
-//    defaultConfig {
-//        applicationId = "com.example.wonder_trip_project"
-//        minSdk = 24
-//        targetSdk = 34
-//        versionCode = 1
-//        versionName = "1.0"
-//
-//        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
-//    }
-//
-//    buildTypes {
-//        release {
-//            isMinifyEnabled = false
-//            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
-//        }
-//    }
-//
-//    buildFeatures{
-//        viewBinding = true
-//    }
-//
-//    compileOptions {
-//        sourceCompatibility = JavaVersion.VERSION_1_8
-//        targetCompatibility = JavaVersion.VERSION_1_8
-//    }
-//}
-//
-//dependencies {
-//
-//    implementation("androidx.appcompat:appcompat:1.6.1")
-//    implementation("com.google.android.material:material:1.10.0")
-//    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-//    implementation("com.google.firebase:firebase-database:20.3.0")
-//    implementation("com.google.firebase:firebase-auth:22.3.0")
-//    testImplementation("junit:junit:4.13.2")
-//    androidTestImplementation("androidx.test.ext:junit:1.1.5")
-//    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
-//}
 
 plugins {
     id 'com.android.application'
@@ -57,8 +10,8 @@ android {
 
     defaultConfig {
         applicationId = "com.example.wonder_trip_project"
-        minSdkVersion = 30
-        targetSdkVersion = 30
+        minSdkVersion = 24
+        targetSdkVersion = 33
         versionCode = 1
         versionName = "1.0"
 
@@ -88,7 +41,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
-    implementation 'com.google.firebase:firebase-storage:22.0.0'
+//    implementation 'com.google.firebase:firebase-storage:24.9.1'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
