--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.3.0'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
+    annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
