--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,16 +36,23 @@ android {
 }
 
 dependencies {
+    implementation 'com.firebaseui:firebase-ui-database:8.0.2'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'com.google.android.material:material:1.11.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
+
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
+//    implementation 'com.android.application:com.android.application.gradle.plugin:8.3.0-alpha18'
+//    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+//apply plugin: 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.0'
+//apply plugin: 'com.android.application:com.android.application.gradle.plugin:8.3.0-alpha18'
