--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
     defaultConfig {
         applicationId = "com.example.wonder_trip_project"
         minSdkVersion = 24
-        targetSdkVersion = 33
+        targetSdkVersion = 30
         versionCode = 1
         versionName = "1.0"
 
@@ -46,6 +46,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0-alpha01'
 //    implementation 'com.android.application:com.android.application.gradle.plugin:8.3.0-alpha18'
 //    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
