--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:label="@string/app_name"
         android:icon="@drawable/logoicon"
+        android:label="@string/app_name"
         android:roundIcon="@drawable/logoicon"
         android:supportsRtl="true"
         android:theme="@style/Theme.WonderTripProject"
         tools:targetApi="31">
-
-        <!--            android:name=".HomeActivity"-->
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddActivity"
+            android:exported="false" /> <!-- android:name=".MainActivity2" -->
+        <activity
+            android:name=".SplashActivity"
+            android:exported="false" /> <!-- android:name=".HomeActivity" -->
         <activity
             android:name=".HomeActivity"
             android:exported="false" />
@@ -23,17 +34,17 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
-
-        <!--            android:name=".SplashActivity"-->
+            android:exported="false" /> <!-- android:name=".SplashActivity" -->
         <activity
-            android:name=".SplashActivity"
+            android:name=".ViewActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
