View a tile configuration is completed - now user can view any tiles

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,13 +48,10 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0-alpha01'
-//    implementation 'com.android.application:com.android.application.gradle.plugin:8.3.0-alpha18'
-//    implementation 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.0'
+    implementation 'com.google.firebase:firebase-messaging:23.4.0'
+    implementation platform('com.google.firebase:firebase-bom:32.7.0')
     annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
-
-//apply plugin: 'com.google.gms.google-services:com.google.gms.google-services.gradle.plugin:4.4.0'
-//apply plugin: 'com.android.application:com.android.application.gradle.plugin:8.3.0-alpha18'
