--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,13 +43,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:20.3.0'
     implementation 'com.google.firebase:firebase-auth:22.3.0'
     implementation 'com.github.dhaval2404:imagepicker:2.1'
-
     implementation 'com.google.firebase:firebase-storage:20.3.0'
     implementation 'com.github.bumptech.glide:glide:5.0.0-rc01'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0-alpha01'
     implementation 'com.google.firebase:firebase-messaging:23.4.0'
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
+    implementation 'com.github.bumptech.glide:annotations:5.0.0-rc01'
     annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
