--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,15 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    signingConfigs {
+        release {
+            storeFile file('monster-new-key.keystore') // Path to your new keystore
+            storePassword 'Amhar@2001'
+            keyAlias 'monster-key-alias'
+            keyPassword 'Amhar@2001'
+        }
+    }
 }
 
 dependencies {
@@ -50,6 +59,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:23.4.0'
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.github.bumptech.glide:annotations:5.0.0-rc01'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:5.0.0-rc01'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
