--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WonderTripProject"
         tools:targetApi="30">
+        <activity
+            android:name=".MapViewActivity"
+            android:exported="false" />
         <activity
             android:name=".TileViewActivity"
             android:exported="false" />
@@ -58,6 +60,9 @@
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+        <meta-data
+            android:name="com.google.android.geo.AIzaSyATWegsb8Rq_R27OZxCLt_nAVUmcrout5A"
+            android:value="AIzaSyATWegsb8Rq_R27OZxCLt_nAVUmcrout5A" />
     </application>
 
 </manifest>
